# pw

./: .gitignore  Cargo.toml  README.md  gen_schema.skill.md
px/: dev.ps1  log.ps1
scripts/: llm_schema_agent.py
src/: config.rs  entry.rs  entry_theme.rs  load_schema.rs  main.rs  model_state.rs  repl.rs  schema.rs  schema_command.rs  ui.rs  ui_argv.rs  ui_argv_str.rs  ui_content.rs  ui_eleinfo.rs  ui_event.rs  ui_helper.rs  ui_style.rs  utils.rs
src/tui/: app.rs  argv.rs  consts.rs  content.rs  ctx.rs  eleinfo.rs  element.rs  elestemp.rs  event.rs  helper.rs  layers.rs  mod.rs  ui.rs
testschemas/: bash.toml  docker.json  ssh.toml
