[package]
name = "pw"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
bitflags = "2.13.0"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = { version = "0.30.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tui-scrollview = "0.6.7"
which = "8.0.4"
